syntax = "proto2";

package tutorial;

message OrderRecord
{
    required uint64 order_id = 2;
    required int64 timestamp = 3;
    required int32 status = 4;
    required string currency_pair = 5;
    required int32 direction = 6;
    required double init_price = 7;
    required double fill_price = 8;
    required double init_volume = 9;
    required double fill_volume = 10;
    required string tags = 11;
    required string description = 12;
    required string zone = 13;
}